// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NavView by default renders correctly 1`] = `
<article class="vnt-navview">
  <aside class="vnt-navview__pane vnt-navview__pane--auto">
    <div class="vnt-navview__pane-header">
        <button type="button" class="vnt-navview__pane-toggle"><span class="vnt-icon vnt-icon--global-navigation"></span></button>
      <div class="vnt-navview__pane-title">

      </div>
    </div>
    <ul class="vnt-navview__items"></ul>
  </aside>
  <div class="vnt-navview__viewport">
    <!---->
    <section class="vnt-navview__content"></section>
  </div>
</article>
`;

exports[`NavView generates correct structure renders correctly 1`] = `
<article class="vnt-navview">
  <aside class="vnt-navview__pane vnt-navview__pane--auto">
    <div class="vnt-navview__pane-header">
        <button type="button" class="vnt-navview__pane-toggle"><span class="vnt-icon vnt-icon--global-navigation"></span></button>
      <div class="vnt-navview__pane-title">
        App name
      </div>
    </div>
      <ul class="vnt-navview__items">
        <vnt-navview-item icon="save" active="">Link 1</vnt-navview-item>
        <vnt-navview-item icon="contact">Link 2</vnt-navview-item>
      </ul>
  </aside>
  <div class="vnt-navview__viewport">
    <header class="vnt-navview__header">
      <hgroup class="vnt-header">
        <h1 class="vnt-header__header">Header</h1>
      </hgroup>
    </header>
    <section class="vnt-navview__content">
      Some content
    </section>
  </div>
</article>
`;

exports[`NavView when using custom pane header renders correctly 1`] = `
<article class="vnt-navview">
  <aside class="vnt-navview__pane vnt-navview__pane--auto">
    <div class="vnt-navview__pane-header">
        <button type="button" class="vnt-navview__pane-toggle"><span class="vnt-icon vnt-icon--global-navigation"></span></button>
      <div class="vnt-navview__pane-title">
        <div>App name with logo</div>
      </div>
    </div>
    <ul class="vnt-navview__items"></ul>
  </aside>
  <div class="vnt-navview__viewport">
    <!---->
    <section class="vnt-navview__content">
      Some content
    </section>
  </div>
</article>
`;
